Revision history for MooseX-POE

0.060 ???

0.050 2008-01-22
  +startup calls STARTALL, which calls all STARTS (like BUILDALL, etc.) (rjbs)
  +fix to the fix for MooseX::Daemonize skipping (autarch)
  +fixing MooseX::Object::Deferred so that it brings in the right metaclass 
	-- this feature is alpha and has 0 tests YMMV

0.0.4 2008-01-17
	(functionally the same as 0.03)
	+Fix test to skip if MooseX::Daemonize not installed

0.0.3 2008-01-15
	+fix Synopsis code to close bug #31432 (sproingie)
	
0.0.2 2007-10-23
	+fix POD
	+fix tests

0.0.1  Thu Oct 11 16:58:27 2007
	+Initial release.
